<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="130dp"
            android:layout_marginTop="110dp"
            android:contentDescription="@string/login_logo"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_login_logo" />

        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/email"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email"
            android:drawablePadding="5dp"
            android:ems="15"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/passLogin"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_password"
            android:drawablePadding="5dp"
            android:ems="15"
            android:hint="@string/password"
            android:imeOptions="actionSend"
            android:inputType="textPassword"
            android:labelFor="@id/emailLogin"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/emailLogin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/emailLogin"
            app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/login_round"
            android:ems="10"
            android:text="@string/sign_in"
            android:textColor="@color/oxfordBlue"
            app:layout_constraintEnd_toEndOf="@+id/passLogin"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/passLogin"
            app:layout_constraintTop_toBottomOf="@+id/passLogin" />

        <TextView
            android:id="@+id/butuhBantuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/butuh_bantuan"
            android:textColor="@color/fireOpal"
            app:layout_constraintEnd_toEndOf="@+id/passLogin"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="@+id/passLogin"
            app:layout_constraintTop_toBottomOf="@+id/passLogin" />

        <TextView
            android:id="@+id/keteranganBawah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/belum_punya_akun"
            android:textColor="@color/oxfordBlue"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/fireOpal"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/keteranganBawah"
            app:layout_constraintTop_toTopOf="@+id/keteranganBawah"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>